# examgen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
desktop/: README.md  build_release.py  build_sidecar.py  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: prompt-txt.txt  prompt.md  sample-txt.txt  sample.md  spec-txt.txt  spec.md
examples/: demo-quiz.html  demo-quiz.md
frontend/: index.html
scf/: _build_scf.py  index.py  main.py
scripts/: embed_images.py
src/examgen/: __init__.py  cli.py  models.py
src/examgen/core/: generator.py  normalizer.py  parser.py  parser_txt.py  transformer.py
src/examgen/templates/default/: challenge.html  exam.html
src/examgen/templates/default/assets/: challenge.css  script.js  style.css
src/examgen/templates/default/assets/js/: 01_constants.js  02_utils.js  03_nav.js  04_render.js  05_scoring.js  06_countdown.js  07_init.js  08_grading.js  09_bookmarks.js  10_challenge.js
src/examgen/web/: app.py
src/examgen/web/static/: style.css
src/examgen/web/templates/: upload.html
tests/: test_generator.py  test_normalizer.py  test_parser.py  test_transformer.py
tests/fixtures/: sample.md
