[project]
name = "examgen"
version = "0.2.0"
description = "Generate offline HTML exams from Markdown"
requires-python = ">=3.9"
dependencies = [
    "click",
    "jinja2",
    "python-frontmatter",
    "mistune",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
examgen = "examgen.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
examgen = [
    "templates/default/**/*",
    "web/templates/**/*",
    "web/static/**/*",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
